--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 ><img
                   class="footer__social-icon"
                   src="./images/youtube-icon.svg"
-                  alt="YouTube"
+                  alt="Ютуб"
                 />YouTube</a
               >
               <a href="#" class="footer__column-link"
@@ -222,7 +222,7 @@
                 ><img
                   class="footer__social-icon"
                   src="./images/tiktok-icon.svg"
-                  alt="TikTok"
+                  alt="ТикТок"
                 />TikTok</a
               >
             </div>
