--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="header__square-pic"></div>
       </header>
 
-      <div class="content">
+      <main class="content">
         <section class="description">
           <div class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
@@ -56,22 +56,22 @@
 
           <ul class="table">
             <li class="table__cell">
-              <p class="table__heading">86 миллиардов</p>
+              <h3 class="table__heading">86 миллиардов</h3>
               <p class="table__text">Число нейронов в мозге человека</p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">2.1 миллиарда</p>
+              <h3 class="table__heading">2.1 миллиарда</h3>
               <p class="table__text">
                 Число нуждающихся в повышении квалификации
               </p>
               <p class="table__text">Всемирный Банк, 2017</p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">1000 терабайт</p>
+              <h3 class="table__heading">1000 терабайт</h3>
               <p class="table__text">Объём памяти человека</p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">500 триллионов</p>
+              <h3 class="table__heading">500 триллионов</h3>
               <p class="table__text">
                 Число ответственных за обучение нервных синапсов у взрослого
                 человека
@@ -79,7 +79,7 @@
             </li>
 
             <li class="table__cell">
-              <p class="table__heading">420 миллионов</p>
+              <h3 class="table__heading">420 миллионов</h3>
               <p class="table__text">
                 Число взрослых людей моложе 25 лет, не имеющих образования для
                 трудоустройства
@@ -88,17 +88,17 @@
             </li>
 
             <li class="table__cell">
-              <p class="table__heading">17–20 лет</p>
+              <h3 class="table__heading">17–20 лет</h3>
               <p class="table__text">Пик обучаемости</p>
             </li>
 
             <li class="table__cell">
-              <p class="table__heading">1885 год</p>
+              <h3 class="table__heading">1885 год</h3>
               <p class="table__text">Открытие кривой забывания</p>
             </li>
 
             <li class="table__cell">
-              <p class="table__heading">1889 год</p>
+              <h3 class="table__heading">1889 год</h3>
               <p class="table__text">Открытие условного рефлекса</p>
             </li>
           </ul>
@@ -119,62 +119,62 @@
           </p>
           <ul class="table table_theme_dark">
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">1</p>
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">
                 Выберите привлекательный проект.
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">2</p>
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
               <p class="table__text table__text_theme_dark">
                 Сосредоточьтесь на каком-то одном навыке.
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">3</p>
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
               <p class="table__text table__text_theme_dark">
                 Определите целевой уровень мастерства.
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">4</p>
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
               <p class="table__text table__text_theme_dark">
                 Разбейте навык на элементы.
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">5</p>
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
               <p class="table__text table__text_theme_dark">
                 Приготовьте всё необходимое для занятий.
               </p>
             </li>
 
             <li class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">6</h4>
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
               <p class="table__text table__text_theme_dark">
                 Устраните препятствия для занятий.
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">7</p>
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
               <p class="table__text table__text_theme_dark">
                 Выделите специальное время для занятий.
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">8</p>
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
               <p class="table__text table__text_theme_dark">
                 Создайте быстрые петли обратной связи.
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">9</p>
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
               <p class="table__text table__text_theme_dark">
                 Занимайтесь по расписанию, короткими интенсивными интервалами.
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">10</p>
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
               <p class="table__text table__text_theme_dark">
                 Уделяйте внимание количеству и скорости.
               </p>
@@ -182,7 +182,7 @@
           </ul>
           <div class="kaufman__triangle"></div>
         </section>
-      </div>
+      </main>
 
       <footer class="footer">
         <div class="footer__columns">
