--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./vendor/normalize.css">
     <link rel="stylesheet" href="./pages/index.css">
     <title>Научиться учиться</title>
   </head>
   <body>
     <div class="page">
-      <main class="content">
-        <header class="header">
-          <div class="logo logo_place_header"></div>
-          <h1 class="header__title">Научиться учиться</h1>
-          <p class="header__subtitle">
-            Какие современные и эффективные подходы к обучению вы можете
-            использовать в своей жизни?
-            <a class="header__link" href="#">Узнать &rarr;</a>
-          </p>
-          <img
-            class="header__main-illustration"
-            src="./images/header-image.png"
-            alt='Главный фрагмент картины "Опять двойка"'
-          >
-          <div class="header__square-pic rotation"></div>
-        </header>
+      <header class="header">
+        <div class="logo logo_place_header"></div>
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle">
+          Какие современные и эффективные подходы к обучению вы можете
+          использовать в своей жизни?
+          <a class="header__link" href="#">Узнать &rarr;</a>
+        </p>
+        <img
+          class="header__main-illustration"
+          src="./images/header-image.png"
+          alt='Главный фрагмент картины "Опять двойка"'
+        >
+        <div class="header__square-pic rotation"></div>
+      </header>
 
+      <main class="content">
         <section class="description">
           <div class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
@@ -62,7 +61,7 @@
                 alt="Книга в руках"
               >
               <h3 class="cards__title">Два вида внимания</h3>
-              <p class="cards__discription">
+              <p class="cards__description">
                 Глубокие знания возникают, если чередовать сфокусированное и
                 рассеянное мышление.
               </p>
@@ -74,7 +73,7 @@
                 alt="Белая скульптура юноши"
               >
               <h3 class="cards__title">Recall</h3>
-              <p class="cards__discription">
+              <p class="cards__description">
                 Вспоминайте изученное - это позволит соединить разрозненные
                 порции памяти.
               </p>
@@ -86,7 +85,7 @@
                 alt="Вид свысока на группу людей в большом помещении"
               >
               <h3 class="cards__title">Интерливинг</h3>
-              <p class="cards__discription">
+              <p class="cards__description">
                 Изучайте несколько навыков одновременно, они обогощают друг
                 друга.
               </p>
@@ -98,7 +97,7 @@
                 alt="Человек в пустом помещении с окнами"
               >
               <h3 class="cards__title">Вопросы</h3>
-              <p class="cards__discription">
+              <p class="cards__description">
                 Слушая преподавателя, придумывайте хороший вопрос, который вас
                 действительно волнует.
               </p>
@@ -110,7 +109,7 @@
                 alt="Стопка книг на руке"
               >
               <h3 class="cards__title">Иллюзия компетентности</h3>
-              <p class="cards__discription">
+              <p class="cards__description">
                 Повторите про себя, запишите, расскажите другу: вам только
                 кажется, что вы овладеваете новой темой.
               </p>
@@ -124,8 +123,6 @@
           <div class="video__iframes">
             <iframe
               class="video__iframe"
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/arj7oStGLkU"
               title="YouTube video player"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -133,8 +130,6 @@
             ></iframe>
             <iframe
               class="video__iframe"
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/5MgBikgcWnY"
               title="YouTube video player"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -147,16 +142,14 @@
           <div class="two-columns">
             <h2 class="two-columns__brief">История Барбары Оакли.</h2>
             <div class="two-columns__main-text">
-
-                С детства Барбаре не давалась математика. Она считала себя
-                законченным гуманитарием, причём далеко не самым умным. В армии
-                она изучала русский язык, чтобы получить надбавку, да так
-                успешно, что её выдвинули в командиры. Но для продвижения по
-                службе нужно было сдавать математику. И тогда Барбара придумала
-                свой подход к точным наукам. Оказалось, если вам что-то «плохо
-                даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
-                кому всё ясно с первого взгляда.
-
+              С детства Барбаре не давалась математика. Она считала себя
+              законченным гуманитарием, причём далеко не самым умным. В армии
+              она изучала русский язык, чтобы получить надбавку, да так успешно,
+              что её выдвинули в командиры. Но для продвижения по службе нужно
+              было сдавать математику. И тогда Барбара придумала свой подход к
+              точным наукам. Оказалось, если вам что-то «плохо даётся», ваши
+              добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с
+              первого взгляда.
             </div>
           </div>
         </section>
@@ -223,7 +216,7 @@
 
         <section class="khan">
           <div class="khan__container">
-            <h3 class="khan__author">Салман Хан</h3>
+            <p class="khan__author">Салман Хан</p>
             <h2 class="khan__title">Весь мир - школа</h2>
             <blockquote class="khan__quote">
               Страсть и новаторство Сала Хана меняют процесс обучения миллионов
@@ -232,17 +225,19 @@
               получить навыки и знания, которые приносят успех в школе, карьере
               и жизни.
             </blockquote>
-            <span class="khan__quote-author">Джордж Лукас</span>
+            <h3 class="khan__quote-author">Джордж Лукас</h3>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
-          </div>
+
             <div class="khan__book-container">
-              <img class="khan__book-pic" src="./images/khan-book.jpg" alt='Обложка книги "Весь мир школа"'>
+              <img
+                class="khan__book-pic"
+                src="./images/khan-book.jpg"
+                alt='Обложка книги "Весь мир школа"'
+              >
               <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
             </div>
+          </div>
         </section>
-
-
-
 
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">
@@ -316,18 +311,42 @@
           </ul>
           <div class="kaufman__triangle rotation"></div>
         </section>
-      <section class="resources">
-         <h2 class="section-title">Полезные ресурсы</h2>
-         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-          <a class="resources__link" href="#"><img src="./images/logo/resources-arzamas.svg" alt=""></a>
-          <a class="resources__link" href="#"><img src="./images/logo/resources-n1.svg" alt=""></a>
-          <a class="resources__link" href="#"><img src="./images/logo/resources-strelka.svg" alt=""></a>
-          <a class="resources__link" href="#"><img src="./images/logo/resources-polka.svg" alt=""></a>
-        </div>
-      </section>
-
-
+        <section class="resources">
+          <h2 class="section-title">Полезные ресурсы</h2>
+          <p class="section-subtitle">
+            Больше материалов о техниках и лайфхаках обучения
+          </p>
+          <div class="resources__logo-zone">
+            <a class="resources__link" href="#"
+              ><img
+                src="./images/logo/resources-arzamas.svg"
+                alt="Логотип Арзамас"
+                width="270px"
+                height="38px"
+            ></a>
+            <a class="resources__link" href="#"
+              ><img
+                src="./images/logo/resources-n1.svg"
+                alt="Логотип N+1"
+                width="270px"
+                height="38px"
+            ></a>
+            <a class="resources__link" href="#"
+              ><img
+                src="./images/logo/resources-strelka.svg"
+                alt="Логотип Стрелка"
+                width="270px"
+                height="38px"
+            ></a>
+            <a class="resources__link" href="#"
+              ><img
+                src="./images/logo/resources-polka.svg"
+                alt="Логотип Полка"
+                width="270px"
+                height="38px"
+            /></a>
+          </div>
+        </section>
       </main>
 
       <footer class="footer">
@@ -337,50 +356,48 @@
             <p class="footer__author">&copy; Екатерина Лошакова</p>
           </div>
 
-          <div class="footer__column footer__column_content_info">
+          <nav class="footer__column footer__column_content_info">
             <h3 class="footer__column-heading">О Практикуме</h3>
-            <nav>
-              <ul class="footer__column-links">
-                <li><a href="#" class="footer__column-link">Главная</a></li>
-                <li><a href="#" class="footer__column-link">Концепция</a></li>
-                <li><a href="#" class="footer__column-link">Наставники</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="footer__column footer__column_content_social">
+
+            <ul class="footer__column-links">
+              <li><a href="#" class="footer__column-link">Главная</a></li>
+              <li><a href="#" class="footer__column-link">Концепция</a></li>
+              <li><a href="#" class="footer__column-link">Наставники</a></li>
+            </ul>
+          </nav>
+          <nav class="footer__column footer__column_content_social">
             <h3 class="footer__column-heading">Соцсети</h3>
-            <nav>
-              <ul class="footer__column-links">
-                <li>
-                  <a href="#" class="footer__column-link">
-                    <img
-                      class="footer__social-icon"
-                      src="./images/youtube-icon.svg"
-                      alt="Ютуб"
-                    >YouTube
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="footer__column-link"
-                    ><img
-                      class="footer__social-icon"
-                      src="./images/vk_color_white.svg"
-                      alt="Вконтакте"
-                    >Вконтакте</a
-                  >
-                </li>
-                <li>
-                  <a href="#" class="footer__column-link"
-                    ><img
-                      class="footer__social-icon"
-                      src="./images/tiktok-icon.svg"
-                      alt="ТикТок"
-                    >TikTok</a
-                  >
-                </li>
-              </ul>
-            </nav>
-          </div>
+
+            <ul class="footer__column-links">
+              <li>
+                <a href="#" class="footer__column-link">
+                  <img
+                    class="footer__social-icon"
+                    src="./images/youtube-icon.svg"
+                    alt="Ютуб"
+                  >YouTube
+                </a>
+              </li>
+              <li>
+                <a href="#" class="footer__column-link"
+                  ><img
+                    class="footer__social-icon"
+                    src="./images/vk_color_white.svg"
+                    alt="Вконтакте"
+                  >Вконтакте</a
+                >
+              </li>
+              <li>
+                <a href="#" class="footer__column-link"
+                  ><img
+                    class="footer__social-icon"
+                    src="./images/tiktok-icon.svg"
+                    alt="ТикТок"
+                  >TikTok</a
+                >
+              </li>
+            </ul>
+          </nav>
         </div>
       </footer>
     </div>
