ПР2 второе ревью (2)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pages/index.css">
     <title>Научиться учиться</title>
@@ -318,33 +318,27 @@
           </p>
           <div class="resources__logo-zone">
             <a class="resources__link" href="#"
-              ><img
+              ><img class="resources__logo"
                 src="./images/logo/resources-arzamas.svg"
                 alt="Логотип Арзамас"
-                width="270px"
-                height="38px"
-            ></a>
+                >
+            </a>
             <a class="resources__link" href="#"
-              ><img
+              ><img class="resources__logo"
                 src="./images/logo/resources-n1.svg"
                 alt="Логотип N+1"
-                width="270px"
-                height="38px"
+
             ></a>
             <a class="resources__link" href="#"
-              ><img
+              ><img class="resources__logo"
                 src="./images/logo/resources-strelka.svg"
                 alt="Логотип Стрелка"
-                width="270px"
-                height="38px"
-            ></a>
+              ></a>
             <a class="resources__link" href="#"
-              ><img
+              ><img class="resources__logo"
                 src="./images/logo/resources-polka.svg"
                 alt="Логотип Полка"
-                width="270px"
-                height="38px"
-            /></a>
+            ></a>
           </div>
         </section>
       </main>
